--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,6 +11,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    "types" : ["vite/client"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
