--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^7.6.3",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
