--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/moment": "^2.11.29",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "redux": "^5.0.1",
